--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-custom-scrollbar": "^1.0.0",
     "vue-multiselect": "^2.1.6",
     "vue-uuid": "^1.1.1"
   },
