--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-custom-scrollbar": "^1.0.0",
     "vue-multiselect": "^2.1.6",
     "vue-uuid": "^1.1.1"
   },
@@ -22,6 +21,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
+    "postcss-import": "^12.0.1",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   },
