--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "tadaima-version1",
+  "wst": "/dist/",
+  "homepage": "https://github.com/antonellam/tadaima-coding-test-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -23,6 +26,7 @@
     "node-sass": "^4.12.0",
     "postcss-import": "^12.0.1",
     "sass-loader": "^7.1.0",
+    "vue-gh-pages": "^1.19.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
