Create docs folder

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tadaima-version1",
-  "homepage": "https://github.com/antonellam/tadaima-coding-test-vue",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "scripts": {
